[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "mcp-hub-server"
version = "0.1.0"
description = "The App Store for MCP Servers — discover, search and install MCP servers from one place"
readme = "README.md"
license = {text = "MIT"}
requires-python = ">=3.10"
authors = [{name = "AiAgentKarl"}]
keywords = ["mcp", "hub", "registry", "discovery", "app-store", "ai-agents", "catalog"]
classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Topic :: Software Development :: Libraries",
]
dependencies = [
    "mcp>=1.0.0",
    "pydantic>=2.0.0",
]

[project.urls]
Homepage = "https://github.com/AiAgentKarl/mcp-hub-server"
Repository = "https://github.com/AiAgentKarl/mcp-hub-server"
Issues = "https://github.com/AiAgentKarl/mcp-hub-server/issues"

[project.scripts]
mcp-hub = "src.server:main"

[tool.hatch.build.targets.wheel]
packages = ["src"]
